--- a/package.json
+++ b/package.json
@@ -23,8 +23,9 @@
     "@ng-bootstrap/ng-bootstrap": "^2.1.0",
     "angular-ui-bootstrap": "^2.5.6",
     "bootstrap": "^4.1.1",
-    "core-js": "^2.5.4",
+    "core-js": "^2.5.7",
     "jquery": "^3.3.1",
+    "ng-bootstrap-modal": "^1.1.19",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
