--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,4 @@
 # Auto detect text files and perform LF normalization
 * linguist-vendored
 *.ts linguist-vendored=false
+*.js linguist-vendored=false
